// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/CreateComment should match snapshot read only channel 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    aria-labelledby="rhs_footer_aria_label"
    className="post-create"
    id="rhsFooter"
    tabIndex="-1"
  >
    <h1
      className="hidden-label"
      id="rhs_footer_aria_label"
    >
      reply input region
    </h1>
    <div
      className="post-create-body comment-create-body"
      id=""
    >
      <div
        className="post-body__cell"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="g6139tbospd18cmxroesdk3kkc"
          characterLimit={4000}
          createMessage="This channel is read-only. Only members with permission can post here."
          disabled={true}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="reply_textbox"
          initialText=""
          isRHS={true}
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          popoverMentionKeyClick={true}
          value=""
        />
        <span
          className="post-body__actions"
        />
      </div>
    </div>
    <Connect(MsgTyping)
      channelId="g6139tbospd18cmxroesdk3kkc"
      postId=""
    />
    <div
      className="post-create-footer"
    >
      <input
        className="btn btn-primary comment-btn pull-right"
        onClick={[Function]}
        type="button"
        value="Add Comment"
      />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 2,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm sending notifications to entire channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;

exports[`components/CreateComment should match snapshot, comment with message 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    aria-labelledby="rhs_footer_aria_label"
    className="post-create"
    id="rhsFooter"
    tabIndex="-1"
  >
    <h1
      className="hidden-label"
      id="rhs_footer_aria_label"
    >
      reply input region
    </h1>
    <div
      className="post-create-body comment-create-body"
      id=""
    >
      <div
        className="post-body__cell"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="g6139tbospd18cmxroesdk3kkc"
          characterLimit={4000}
          createMessage="Add a comment..."
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="reply_textbox"
          initialText=""
          isRHS={true}
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          popoverMentionKeyClick={true}
          value="Test message"
        />
        <span
          className="post-body__actions"
        >
          <Connect(FileUpload)
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="comment"
            rootId=""
          />
          <span
            aria-label="Open emoji picker"
            className="emoji-picker__container"
            role="button"
            tabIndex="0"
          >
            <EmojiPickerOverlay
              enableGifPicker={true}
              onEmojiClick={[Function]}
              onEmojiClose={[Function]}
              onGifClick={[Function]}
              onHide={[Function]}
              show={false}
              spaceRequiredAbove={476}
              spaceRequiredBelow={497}
              target={[Function]}
              topOffset={55}
            />
            <EmojiIcon
              className="icon icon--emoji emoji-rhs "
              onClick={[Function]}
            />
          </span>
        </span>
      </div>
    </div>
    <Connect(MsgTyping)
      channelId="g6139tbospd18cmxroesdk3kkc"
      postId=""
    />
    <div
      className="post-create-footer"
    >
      <input
        className="btn btn-primary comment-btn pull-right"
        onClick={[Function]}
        type="button"
        value="Add Comment"
      />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 2,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm sending notifications to entire channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;

exports[`components/CreateComment should match snapshot, emoji picker disabled 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    aria-labelledby="rhs_footer_aria_label"
    className="post-create"
    id="rhsFooter"
    tabIndex="-1"
  >
    <h1
      className="hidden-label"
      id="rhs_footer_aria_label"
    >
      reply input region
    </h1>
    <div
      className="post-create-body comment-create-body"
      id=""
    >
      <div
        className="post-body__cell"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="g6139tbospd18cmxroesdk3kkc"
          characterLimit={4000}
          createMessage="Add a comment..."
          disabled={false}
          emojiEnabled={false}
          handlePostError={[Function]}
          id="reply_textbox"
          initialText=""
          isRHS={true}
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          popoverMentionKeyClick={true}
          value="Test message"
        />
        <span
          className="post-body__actions"
        >
          <Connect(FileUpload)
            fileCount={3}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="comment"
            rootId=""
          />
        </span>
      </div>
    </div>
    <Connect(MsgTyping)
      channelId="g6139tbospd18cmxroesdk3kkc"
      postId=""
    />
    <div
      className="post-create-footer"
    >
      <input
        className="btn btn-primary comment-btn pull-right"
        onClick={[Function]}
        type="button"
        value="Add Comment"
      />
      <FilePreview
        fileInfos={
          Array [
            Object {},
            Object {},
            Object {},
          ]
        }
        onRemove={[Function]}
        uploadsInProgress={Array []}
        uploadsProgressPercent={Object {}}
      />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 2,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm sending notifications to entire channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;

exports[`components/CreateComment should match snapshot, empty comment 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    aria-labelledby="rhs_footer_aria_label"
    className="post-create"
    id="rhsFooter"
    tabIndex="-1"
  >
    <h1
      className="hidden-label"
      id="rhs_footer_aria_label"
    >
      reply input region
    </h1>
    <div
      className="post-create-body comment-create-body"
      id=""
    >
      <div
        className="post-body__cell"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="g6139tbospd18cmxroesdk3kkc"
          characterLimit={4000}
          createMessage="Add a comment..."
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="reply_textbox"
          initialText=""
          isRHS={true}
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          popoverMentionKeyClick={true}
          value=""
        />
        <span
          className="post-body__actions"
        >
          <Connect(FileUpload)
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="comment"
            rootId=""
          />
          <span
            aria-label="Open emoji picker"
            className="emoji-picker__container"
            role="button"
            tabIndex="0"
          >
            <EmojiPickerOverlay
              enableGifPicker={true}
              onEmojiClick={[Function]}
              onEmojiClose={[Function]}
              onGifClick={[Function]}
              onHide={[Function]}
              show={false}
              spaceRequiredAbove={476}
              spaceRequiredBelow={497}
              target={[Function]}
              topOffset={55}
            />
            <EmojiIcon
              className="icon icon--emoji emoji-rhs "
              onClick={[Function]}
            />
          </span>
        </span>
      </div>
    </div>
    <Connect(MsgTyping)
      channelId="g6139tbospd18cmxroesdk3kkc"
      postId=""
    />
    <div
      className="post-create-footer"
    >
      <input
        className="btn btn-primary comment-btn pull-right disabled"
        onClick={[Function]}
        type="button"
        value="Add Comment"
      />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 2,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm sending notifications to entire channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;

exports[`components/CreateComment should match snapshot, non-empty message and uploadsInProgress + fileInfos 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    aria-labelledby="rhs_footer_aria_label"
    className="post-create"
    id="rhsFooter"
    tabIndex="-1"
  >
    <h1
      className="hidden-label"
      id="rhs_footer_aria_label"
    >
      reply input region
    </h1>
    <div
      className="post-create-body comment-create-body"
      id=""
    >
      <div
        className="post-body__cell"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="g6139tbospd18cmxroesdk3kkc"
          characterLimit={4000}
          createMessage="Add a comment..."
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="reply_textbox"
          initialText=""
          isRHS={true}
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          popoverMentionKeyClick={true}
          value="Test message"
        />
        <span
          className="post-body__actions"
        >
          <Connect(FileUpload)
            fileCount={4}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="comment"
            rootId=""
          />
          <span
            aria-label="Open emoji picker"
            className="emoji-picker__container"
            role="button"
            tabIndex="0"
          >
            <EmojiPickerOverlay
              enableGifPicker={true}
              onEmojiClick={[Function]}
              onEmojiClose={[Function]}
              onGifClick={[Function]}
              onHide={[Function]}
              show={false}
              spaceRequiredAbove={476}
              spaceRequiredBelow={497}
              target={[Function]}
              topOffset={55}
            />
            <EmojiIcon
              className="icon icon--emoji emoji-rhs "
              onClick={[Function]}
            />
          </span>
        </span>
      </div>
    </div>
    <Connect(MsgTyping)
      channelId="g6139tbospd18cmxroesdk3kkc"
      postId=""
    />
    <div
      className="post-create-footer"
    >
      <input
        className="btn btn-primary comment-btn pull-right"
        onClick={[Function]}
        type="button"
        value="Add Comment"
      />
      <span
        className="pull-right post-right-comments-upload-in-progress"
      >
        <FormattedMessage
          defaultMessage="File uploading"
          id="create_comment.file"
          values={Object {}}
        />
      </span>
      <FilePreview
        fileInfos={
          Array [
            Object {},
            Object {},
            Object {},
          ]
        }
        onRemove={[Function]}
        uploadsInProgress={
          Array [
            Object {},
          ]
        }
        uploadsProgressPercent={Object {}}
      />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 2,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm sending notifications to entire channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;
